<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
    <include layout="@layout/navigation_layout_black"
        android:id="@+id/navigation"/>
    <EditText
        android:id="@+id/edt_oldpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/title2"
        android:textColorHint="@color/title3"
        android:textSize="@dimen/small_text_size"
        android:drawableLeft="@drawable/icon_code_gray"
        android:drawablePadding="12dp"
        android:padding="12dp"
        android:singleLine="true"
        android:inputType="textPassword"
        android:hint="@string/enter_oldpassword"
        android:background="@android:color/white"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/split_line"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        />
    <EditText
        android:id="@+id/edt_newpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/title2"
        android:textColorHint="@color/title3"
        android:textSize="@dimen/small_text_size"
        android:drawableLeft="@drawable/icon_code_gray"
        android:drawablePadding="12dp"
        android:padding="12dp"
        android:singleLine="true"
        android:inputType="textPassword"
        android:hint="@string/enter_newpassword"
        android:background="@android:color/white"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/split_line"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        />
    <EditText
        android:id="@+id/edt_againnewpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/title2"
        android:textColorHint="@color/title3"
        android:textSize="@dimen/small_text_size"
        android:drawableLeft="@drawable/icon_code_again"
        android:drawablePadding="12dp"
        android:padding="12dp"
        android:singleLine="true"
        android:inputType="textPassword"
        android:hint="@string/enter_againnewpassword"
        android:background="@android:color/white"/>
    <com.offer9191.boss.widget.progressbutton.iml.ActionProcessButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="12dp"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        custom:pb_colorComplete="@color/green_complete"
        custom:pb_colorNormal="#E51C23"
        custom:pb_colorPressed="#A81C23"
        custom:pb_colorProgress="#A81C23"
        custom:pb_textComplete="@string/submit_success"
        custom:pb_textProgress="@string/submit_progress" />
</LinearLayout>