<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_line">
    </FrameLayout>
    <View
        android:id="@+id/bottom_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@+id/rg"
        android:background="#D2D3D5"/>
    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:orientation="horizontal"
        android:checkedButton="@+id/tab1"
        android:background="#FBFCFD"
        android:layout_alignParentBottom="true">
        <RadioButton
            android:id="@+id/tab1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@null"
            android:textColor="@color/bottom_cb_textcolor"
            android:drawableTop="@drawable/bottom_cb1"
            android:text="@string/tab1"
            android:checked="true"
            />
        <RadioButton
            android:id="@+id/tab2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:textColor="@color/bottom_cb_textcolor"
            android:drawableTop="@drawable/bottom_cb2"
            android:text="@string/tab2"
            android:gravity="center"
            />
        <RadioButton
            android:id="@+id/tab3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:textColor="@color/bottom_cb_textcolor"
            android:drawableTop="@drawable/bottom_cb3"
            android:text="@string/tab3"
            android:gravity="center"
            />
        <RadioButton
            android:id="@+id/tab4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:textColor="@color/bottom_cb_textcolor"
            android:drawableTop="@drawable/bottom_cb4"
            android:text="@string/tab4"
            android:gravity="center"
            />
        <RadioButton
            android:id="@+id/tab5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:textColor="@color/bottom_cb_textcolor"
            android:drawableTop="@drawable/bottom_cb5"
            android:text="@string/tab5"
            android:gravity="center"
            />
    </RadioGroup>
</RelativeLayout>