<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/nav_bg"
        android:layout_height="@dimen/navigation_bar_height"
        android:focusableInTouchMode="true"
        android:focusable="true"
        >
        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/nav_btn_back"
            android:padding="12dp"/>
        <EditText
            android:id="@+id/edt_content"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:inputType="text"
            android:hint="@string/candidate_search_hint"
            android:textColorHint="@color/title3"
            android:textColor="@color/title2"
            android:textSize="@dimen/small_text_size"
            android:maxLines="1"
            android:background="@drawable/search_bg"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:paddingLeft="16dp"
            android:imeOptions="actionSearch"
            android:drawableLeft="@drawable/icon_search"
            android:drawablePadding="5dp"
            android:layout_toRightOf="@+id/tv_back"
            />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/advanced_search"
        android:textColor="@color/title2"
        android:textSize="@dimen/micro_middle_text_size"/>

    <RelativeLayout
        android:id="@+id/rl_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_click_bg"
        android:padding="12dp">
        <TextView
            android:id="@+id/tv_gendertab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/middle_text_size"
            android:textColor="@color/title3"
            android:text="@string/gender"/>
        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/middle_text_size"
            android:textColor="@color/title2"
            android:gravity="right"
            android:layout_alignParentRight="true"
            android:drawableRight="@drawable/icon_arrow_next"
            android:layout_toRightOf="@+id/tv_gendertab"
            android:drawablePadding="5dp"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/split_line"/>
    <RelativeLayout
        android:id="@+id/rl_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_click_bg"
        android:padding="12dp">
        <TextView
            android:id="@+id/tv_agetab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/middle_text_size"
            android:textColor="@color/title3"
            android:text="@string/age"/>
        <TextView
            android:id="@+id/tv_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/middle_text_size"
            android:textColor="@color/title2"
            android:gravity="right"
            android:layout_alignParentRight="true"
            android:drawableRight="@drawable/icon_arrow_next"
            android:layout_toRightOf="@+id/tv_agetab"
            android:drawablePadding="5dp"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/split_line"/>
    <RelativeLayout
        android:id="@+id/rl_position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_click_bg"
        android:padding="12dp">
        <TextView
            android:id="@+id/tv_positiontab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/middle_text_size"
            android:textColor="@color/title3"
            android:text="@string/position"/>
        <TextView
            android:id="@+id/tv_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/middle_text_size"
            android:textColor="@color/title2"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:drawableRight="@drawable/icon_arrow_next"
            android:layout_toRightOf="@+id/tv_positiontab"
            android:singleLine="true"
            android:layout_marginLeft="12dp"
            android:drawablePadding="5dp"/>
    </RelativeLayout>
    <com.offer9191.boss.widget.progressbutton.iml.ActionProcessButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="12dp"
        android:text="@string/search"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        custom:pb_colorComplete="@color/green_complete"
        custom:pb_colorNormal="#E51C23"
        custom:pb_colorPressed="#A81C23"
        custom:pb_colorProgress="#A81C23"
        custom:pb_textComplete="@string/submit_success"
        custom:pb_textProgress="@string/submit_progress" />
</LinearLayout>