<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
    <include layout="@layout/navigation_layout_black"
        android:id="@+id/navigation"/>

    <RelativeLayout
        android:id="@+id/rl_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_click_bg"
        android:layout_marginTop="20dp"
        android:padding="12dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_middle_text_size"
            android:textColor="@color/title2"
            android:text="@string/feedback"
            android:drawableRight="@drawable/icon_arrow_next"
            android:gravity="center_vertical"
            android:drawablePadding="12dp"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/split_line"/>
    <RelativeLayout
        android:id="@+id/rl_changepassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_click_bg"
        android:padding="12dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_middle_text_size"
            android:textColor="@color/title2"
            android:text="@string/change_password"
            android:drawableRight="@drawable/icon_arrow_next"
            android:gravity="center_vertical"
            android:drawablePadding="12dp"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/split_line"/>
    <RelativeLayout
        android:id="@+id/rl_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_click_bg"
        android:padding="12dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_middle_text_size"
            android:textColor="@color/title2"
            android:text="@string/about"
            android:drawableRight="@drawable/icon_arrow_next"
            android:gravity="center_vertical"
            android:drawablePadding="12dp"
            />
    </RelativeLayout>
     <TextView
         android:id="@+id/tv_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_click_bg"
            android:padding="12dp"
            android:textSize="@dimen/small_middle_text_size"
            android:textColor="@color/main_nav_bg"
            android:text="@string/log_out"
            android:gravity="center"
            android:layout_marginTop="20dp"
            />
</LinearLayout>