<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/navgation_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/navigation_bar_height"
        android:background="@color/nav_bg"
        >
        <TextView
            android:id="@+id/tv_left"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textColor="@android:color/white"
            android:drawableLeft="@drawable/nav_btn_back"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:drawablePadding="8dp"
            />
        <TextView
            android:id="@+id/tv_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:typeface="monospace"
            />
        <TextView
            android:id="@+id/tv_right2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="12dp"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:paddingLeft="12dp"
            android:layout_toLeftOf="@+id/tv_right"
            />
        <TextView
            android:id="@+id/tv_right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="12dp"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:drawableLeft="@drawable/btn_nav_share"
            android:paddingLeft="12dp"
            />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/navgation_top"
        android:layout_above="@+id/btn_submit">
        <com.offer9191.boss.widget.BridgerWebView
            android:id="@+id/webview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </com.offer9191.boss.widget.BridgerWebView>

    </RelativeLayout>
    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/navigation_bar_height"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:visibility="gone">
        <TextView
            android:id="@+id/tv_refuse"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/refuse"
            android:textColor="@color/title2"
            android:textSize="@dimen/small_text_size"
            android:background="@drawable/white_click_bg"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/tv_undertake"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/undertake"
            android:textColor="@android:color/white"
            android:textSize="@dimen/small_text_size"
            android:background="@color/main_nav_bg"
            android:layout_weight="1"
            />
    </LinearLayout>
    <com.offer9191.boss.widget.progressbutton.iml.ActionProcessButton
        android:layout_alignParentBottom="true"
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="12dp"
        android:text="@string/add_candidate"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        custom:pb_colorComplete="@color/green_complete"
        custom:pb_colorNormal="#E51C23"
        custom:pb_colorPressed="#A81C23"
        custom:pb_colorProgress="#A81C23"
        custom:pb_textComplete="@string/submit_success"
        custom:pb_textProgress="@string/submit_progress"
        android:visibility="gone"/>
</RelativeLayout>